# solver-lnk

./: .gitignore  .gitmodules  .golangci.yml  AGENTS.md  ALGORITHM_CHANGES_SINCE_TOON.md  PERFORMANCE.md  README.md  REMAINING.md  RULES.md  benchmark.txt  go.mod  go.sum  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
cmd/castle/: main.go
cmd/server/: main.go  server_test.go
cmd/solver/: main.go
cmd/units/: main.go
data/: arsenal  buildings.json  farm  fortifications  keep  library  library_levels.json  lumberjack  market  missions.json  ore_mine  ore_store  quarry  stone_store  tavern  tech_library_requirements.json  technologies.json  technology_prerequisites.json  wood_store
data/missions/: castle_festival  chase_bandits_away  chop_wood  collect_taxes  create_a_trading_post  feed_miners  forging_tools  help_stone_cutters  hire_stone_cutters  hunting  jousting  mandatory_overtime  market_day  overtime_ore  overtime_stone  overtime_wood
data/techs/: armoursmith  beer_tester  blacksmith  cellar_storeroom  cistern  crop_rotation  crossbow  flaming_arrows  fortress_construction  horse_armour  horse_breeding  iron_hardening  longbow  map_of_area  poison_arrows  stirrup  yoke  (+4 more)
docs/: FUZZ_TESTING.md  SOLVER_V3_DESIGN.md  implementation_plan.md
examples/: castle_midgame.json  castle_midgame.pb  gen.go  units_custom.json  units_custom.pb
go-solver/: go.mod  go.sum  solver
proto/: config.pb.go  config.proto  config_grpc.pb.go
scripts/: parse_buildings.py  parse_library.py  test-all.sh
solver_lnk/: __init__.py
systemd/: solver-lnk.service
(+85 files in other folders)
