[project]
name = "solver-lnk"
version = "0.1.0"
description = "Lords and Knights build order optimizer using OR-Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.14.6206",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.7",
]
